- * okno rozmowy: PAGEUP i PAGEDOWN nie przesuwaja historii rozmowy.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@714 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 +++ wersja 0.3.3-rc2
 * sporo poprawek dla FreeBSD
 * gdy mamy status domy¶lny "niedostêpny" to nie ginie nam zapamiêtany opis statusu
+* okno rozmowy: PAGEUP i PAGEDOWN nie przesuwaj± historii rozmowy
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
