--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 * sporo poprawek dla FreeBSD
 * gdy mamy status domy¶lny "niedostêpny" to nie ginie nam zapamiêtany opis statusu
 * okno rozmowy: PAGEUP i PAGEDOWN nie przesuwaj± historii rozmowy
+* je¶li okno wyboru statusu jest otwarte to klikniêcie informacji o statusie
+  zamyka to okno
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
