dodano wywalanie kuriera e-mail
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@719 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -22,6 +22,7 @@
  ! wyja¶niæ zapêtlenia siê przy utracie ³±czno¶ci z serwerem 
  ! przetestowaæ wysy³anie plików
  + dopracowaæ grupy
+ + wywoywanie domyslnego klienta e-mail i pozycja e-mail w info o kontaktach
 
  TODO dla wersji 0.4.0
 -----------------------
