- okno rozmowy: poprawione podpowiedzi (hinty) do guzika wlaczajacego/wylaczajacego szyfrowanie.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@720 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 * je¶li okno wyboru statusu jest otwarte to klikniêcie informacji o statusie
   zamyka to okno
 * Geometry w kadu.conf zgodne z wersjami kadu wcze¶niejszymi ni¿ 0.3.3-rc1
+* okno rozmowy: poprawione podpowiedzi (hinty) do guzika w³±czaj±cego/wy³±czaj±cego
+  szyfrowanie
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
