--- a/TODO
+++ b/TODO
@@ -23,6 +23,7 @@
  ! przetestowaæ wysy³anie plików
  + dopracowaæ grupy
  + wywoywanie domyslnego klienta e-mail i pozycja e-mail w info o kontaktach
+ + wysy³anie smsów do wielu osób jednoczesnie
 
  TODO dla wersji 0.4.0
 -----------------------
