tlo ikonki w tray- moze bedzie dobrze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@723 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 * Geometry w kadu.conf zgodne z wersjami kadu wcze¶niejszymi ni¿ 0.3.3-rc1
 * okno rozmowy: poprawione podpowiedzi (hinty) do guzika w³±czaj±cego/wy³±czaj±cego
   szyfrowanie
+* byæ mo¿e rozwi±zanie problemu z t³em ikonki w tray'u
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
