--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 * okno rozmowy: poprawione podpowiedzi (hinty) do guzika w³±czaj±cego/wy³±czaj±cego
   szyfrowanie
 * byæ mo¿e rozwi±zanie problemu z t³em ikonki w tray'u
+* ESC w glownym oknie je minimalizuje
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
