escape'owanie znakow < i >
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@732 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
 * ESC w glownym oknie je minimalizuje
 * Wsparcie dla Window Maker'a (dokowanie). Trzeba ustawic UseWMakerStyleDocking
   w kadu.conf (sekcja [Global]). Uwaga: pod KDE wystepuja dziwne efekty.
+* escape'owanie znaków '<' i '>' w pokazywanych hintach w userbox (scooty)
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
