--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
   w kadu.conf (sekcja [Global]). Uwaga: pod KDE wystepuja dziwne efekty.
 * escape'owanie znaków '<' i '>' w pokazywanych hintach w userbox (scooty)
 * prawdopodobnie rozwi±zany problem z zapisywaniem has³a
+* poprawiony b³±d wystêpuj±cy gdy ustawiony jest nieistniej±cy ju¿
+  zestaw emotów.
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
