--- a/ChangeLog
+++ b/ChangeLog
@@ -15,10 +15,12 @@
 * prawdopodobnie rozwi±zany problem z zapisywaniem has³a
 * poprawiony b³±d wystêpuj±cy gdy ustawiony jest nieistniej±cy ju¿
   zestaw emotów.
-* dockhint->trayhint(poprawki, ulepszczenia i przygotowania do dodania powiadomien
+* dockhint->trayhint(poprawki, ulepszenia i przygotowania do dodania powiadomieñ
   o dostêpnych osobach i ew. b³êdach podczas ³±czenia siê z serwerem GG.
-* informacja o dostepnosci przez hinta w trayu i wysweitlanie niektorych
-  bledow podczas próby ³±czenia siê +poprawki
+* informacja o dostêpno¶ci przez hinta w tray'u i wy¶wietlanie niektórych
+  b³êdów podczas próby ³±czenia siê + poprawki
+* kadu nie wywala siê, gdy s± problemy z odczytaniem informacji o dostêpno¶ci
+  nowych wersji
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
