--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
   b³êdów podczas próby ³±czenia siê + poprawki
 * kadu nie wywala siê, gdy s± problemy z odczytaniem informacji o dostêpno¶ci
   nowych wersji
+* drobne porz±dki z polem statusu (powinno zmniejszaæ siê przy zmianie rozmiaru
+  okna kadu)
 
 +++ wersja 0.3.3-rc1
 * sms.cpp ma szansê kompilowaæ siê na Qt < 3.0.5
